--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
    
-    <script type="text/jscript">
+    <script type="text/javascript">
     /* var nombre = prompt('Cual es tu nombre?');
     alert("Hola " + nombre + " nos alegramos de volver a verte por aqui!!");
     var primerValor = 5;
